--- a/src/dashboard/_misc/common.css
+++ b/src/dashboard/_misc/common.css
@@ -9,3 +9,10 @@ in the NodeCG dashboard panels anyway. */
 .v-application--wrap {
   min-height: 0 !important;
 }
+
+/* Remove the default NodeCG panel styling. */
+body {
+  background-color: initial !important;
+  color: initial !important;
+  margin: initial !important;
+}
